# MyCppFiles

./: .gitignore  README.md  notes.org
LKSH/: CMakeLists.txt  a_star.cpp  b.cpp  e.cpp  g3.cpp  input.txt  main  main.cpp  output.txt
Lib/: UNICUM.md  bin_search.cpp  bp_max_cost_for_weight.cpp  diafant_solver.cpp  evklid_ext.cpp  float_backpack.cpp  ford-belman.cpp  gauss_method.cpp  geometry.cpp  gistogram_max_s.cpp  hashe.cpp  katalana.cpp  kuhn.cpp  main  max_area_of_zeros_2d.cpp  max_area_of_zeros_extended.cpp  merge_sort_count.cpp  min_control_set.cpp  min_on_slice.cpp  nearest_min_right.cpp  overlapping_squares_area.cpp  prima_on_2d.cpp  queue_from_stacks.cpp  queueu_class.cpp  read_write_files.cpp  segment_union.cpp  segments_tree.cpp  sort_custom_structs.cpp  unicum.cpp  zer-one-bfs.cpp
Lib/  num_theory/: sieve_erato.cpp
Lib/dp/: backpack_min_items_for_spec_w.cpp  check_if_can_halfs.cpp  float_backpack.cpp  max_common_seq.cpp  max_incr_seq_size_only.cpp  max_sub_palindrom.cpp  max_weight_lower_than_spec.cpp  pereborbin.cpp
Lib/geometry/: geometry3d.cpp
Lib/graphs/: crascall.cpp  dijkstra.cpp  floyd.cpp  kuhn-munkers.cpp  prima.cpp  top_sort.cpp
Lib/lin_alg/: gistogram_max_s.cpp  max_area_of_zeros_2d.cpp  min_right.cpp  priority_queue.cpp  queue_from_stacks.cpp  (+1 more)
Sirius/: CMakeLists.txt  default.cpp  main  main.cpp  structs.cpp  temp.txt
Unicum/: main  main.cpp
Yandex/: CMakeLists.txt  a.out  e.cpp  input.txt  main  main.cpp  output.txt  tch.cpp  todo.txt
Yandex/kindness/: c.cpp
Yandex/structs/: f.cpp
Yandex/ukazateli/: b.cpp  e.cpp  g.cpp
(+45 files in other folders)
